secondfile/objects/Release_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_Days__c</fullName>
        <label>Duration (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>System Testing</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>End to End Testing</fullName>
                </value>
                <value>
                    <fullName>UCT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <label>Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <formula>CASE( 
  MOD( Start_Date__c - DATE( 1900, 1, 7 ), 7 ),
  3, Start_Date__c + 2 + Duration_Days__c,
  4, Start_Date__c + 2 + Duration_Days__c,
  5, Start_Date__c + 2 + Duration_Days__c,
  6, Start_Date__c + 1 + Duration_Days__c,
  Start_Date__c + Duration_Days__c
)</formula>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <referenceTo>Release_Configuration__c</referenceTo>
        <relationshipLabel>Release Milestones</relationshipLabel>
        <relationshipName>Release_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Release Milestone</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Release Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>